Bug 1764933: Do not null out the transceiver in Shutdown r=jib

Differential Revision: https://phabricator.services.mozilla.com/D144046